[tool.poetry]
name = "project1_bochkarev_semen_m25_555"
version = "0.1.0"
description = "Текстовая adventure игра 'Лабиринт сокровищ' на чистом Python"
authors = ["Semyon Bochkaryov <squizduos@gmail.com>"]

packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.10,<0.15.0"
